--- a/client/src/comps/Main/style.module.css
+++ b/client/src/comps/Main/style.module.css
@@ -1,3 +1,7 @@
 .filterplacement {
   justify-content: flex-end;
 }
+
+.details {
+  font-size: 1.8rem;
+}
