--- a/client/src/comps/notification/notification.module.css
+++ b/client/src/comps/notification/notification.module.css
@@ -32,3 +32,9 @@
   justify-content: flex-end;
   margin-top: 2rem;
 }
+
+.btn_watchedwith {
+  margin: 2rem;
+  width: fit-content;
+  float: right;
+}
